--- a/.travis.yml
+++ b/.travis.yml
@@ -2,5 +2,7 @@ language: python
 python:
   - "2.7"
   - "3.3"
+install:
+  - python setup.py install
 # command to run tests
-script: python setup.py nosetests --with-doctest
+script: nosetests --with-doctest
